# queryzen

./: .gitignore  DEVELOP.md  LICENSE.md  README.md  docker-compose-ci.yml  pylintrc  pyproject.toml  sonar-project.properties
.github/: check_failed_tests.py  dependabot.yml
.github/workflows/: api_lint.yml  api_release.yml  client_lint.yml  client_release.yml  client_test.yml  docker_build.yml  docs_cd.yml  lint_code.yml  lint_code_backend.yml  lint_code_client.yml  release.yml
queryzen/: __init__.py
queryzen-api/: .gitignore  Dockerfile  database.sqlite3  db.sqlite3  docker-compose-ci.override.yml  docker-compose-ci.yml  docker-compose.prod.yml  docker-compose.yml  examples.http  manage.py  pylintrc  pyproject.toml  resetdb.sh
queryzen-api/apps/authentication/: apps.py  models.py  urls.py
queryzen-api/apps/authentication/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_alter_user_managers_user_is_superuser.py
queryzen-api/apps/core/: admin.py  apps.py  exceptions.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
queryzen-api/apps/core/migrations/: 0001_initial.py  0002_alter_execution_zen.py  0002_rename_execution_time_execution_execution_time_in_ms.py  0003_alter_queryzen_unique_together.py  0004_alter_queryzen_version.py  0005_execution_query.py  0006_zen_alter_execution_zen_delete_queryzen.py
queryzen-api/apps/core/tests/: factories.py  test_queryzen.py
queryzen-api/apps/shared/: mixins.py
queryzen-api/apps/testing/: urls.py  views.py
queryzen-api/compose/local/django/: Dockerfile
queryzen-api/compose/prod/django/: Dockerfile  entrypoint  start
queryzen-api/compose/prod/django/celery/beat/: start
queryzen-api/compose/prod/django/celery/flower/: start
queryzen-api/compose/prod/django/celery/worker/: start
queryzen-api/core/: models.py  urls.py  views.py
queryzen-api/core/migrations/: 0001_initial.py  0002_lambdaquery_created_at.py  0003_rename_lambdaquery_querylambda.py
queryzen-api/databases/: base.py
queryzen-api/helpers/: generate_example_zens.py
queryzen-api/queryzen_api/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
queryzen-api/queryzen_rest_api/: asgi.py  settings.py  urls.py  wsgi.py
queryzen-client/: Dockerfile  README.md  pylintrc  pyproject.toml
queryzen-client/queryzen/: __init__.py  backend.py  constants.py  exceptions.py  queryzen.py  sql.py  table.py  types.py
queryzen-client/tests/: conftest.py  shared.py  test_execution.py  test_queryzen.py  test_sql.py  test_utils.py  test_zen.py
queryzen-client/tests/queryzen/: test_create.py  test_delete.py  test_filter.py  test_get.py  test_run.py  test_stats.py
queryzen-docs/: docker-compose.yml  mkdocs.yml  pyproject.toml
queryzen-docs/docs/: faq.md  index.md
queryzen-docs/docs/concepts/: queryzen.md  zen.md
queryzen-docs/docs/tutorials/python/: creating_a_zen.md  index.md  running_a_zen.md
queryzen-docs/docs/tutorials/use-cases/: multi-programm-hybrid-search.md
tests/: test_queryzen.py
website_docs/: pyproject.toml
website_docs/docs/: faq.md  index.md
website_docs/docs/concepts/: queryzen.md  zen.md
website_docs/docs/tutorials/python/: creating_a_zen.md  index.md
