[project]
name = "queryzen-api"
version = "0.1.0"
requires-python = "~=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "django>=5.1.5,<6",
    "djangorestframework>=3.15.2,<4",
    "django-filter~=25.1",
    "faker>=36.1.0,<37",
    "factory-boy>=3.3.1,<4",
    "celery>=5.4.0,<6",
    "django-celery-results>=2.5.1,<3",
    "redis>=5.2.1,<6",
    "sqlalchemy>=2.0.37,<3",
    "httpx>=0.28.1,<0.29",
]

[dependency-groups]
dev = ["pylint>=3.3.4,<4"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
