[project]
name = "queryzen"
version = "0.0.1"
description = ""
authors = [{ name = "surister", email = "surister98@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
license = "MIT"
dependencies = ["httpx>=0.28.1,<0.29"]

[dependency-groups]
dev = [
    "pylint>=3.3.3,<4",
    "pytest>=8.3.4,<9",
    "pytest-cov>=6.0.0,<7",
    "polars>=1.22.0,<2",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
