[project]
name = "queryzen-docs"
version = "0.1.0"
description = "Documentation site for QueryZen"
authors = [{ name = "surister", email = "surister98@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = ["mkdocs-material>=9.6.2,<10"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
