[tool.poetry]
name = "queryzen-docs"
version = "0.1.0"
description = "Documentation site for QueryZen"
authors = ["surister <surister98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
